--- a/EyalGreenbergCaseStudy6.html
+++ b/EyalGreenbergCaseStudy6.html
@@ -123,6 +123,17 @@ $(document).ready(function () {
 </div>
 
 
+<div id="we-have-been-given-two-sources-of-information-both-from-the-world-bank-archive" class="section level5">
+<h5>We have been given two sources of information, both from the World Bank Archive:</h5>
+</div>
+<div id="the-gdp-file---includes-the-list-of-countries-their-yearly-gdp-in-usd-millions-and-ranking-based-on-this-gdp-and-" class="section level5">
+<h5>1. The GDP file - includes the list of countries, their yearly GDP (in USD millions) and ranking, based on this GDP; and-</h5>
+</div>
+<div id="the-education-file---includes-various-information-by-country" class="section level5">
+<h5>2. The education file - includes various information, by country</h5>
+</div>
+<div id="the-purpose-of-this-project-is-to-use-these-sources-combine-them-and-build-an-analysis-to-understand-information-that-the-education-file-has-but-with-the-context-of-ranking-of-the-country-or-group-of-countries." class="section level5">
+<h5>The purpose of this project is to use these sources, combine them, and build an analysis to understand information that the education file has, but with the context of ranking of the country or group of countries.</h5>
 <pre class="r"><code>#### download and load the relevant packages for tidying the data
 library(repmis)
 library(RCurl)</code></pre>
@@ -171,6 +182,7 @@ GDPData3$GDPUSDMillions = as.numeric(GDPData3$GDPUSDMillions)
 
 ### Merge the two files
 MergedData &lt;- merge(x = GDPData3, y = EDUCData, by = &quot;CountryCode&quot;, all = TRUE)</code></pre>
+</div>
 <div id="question-1-match-the-data-based-on-the-country-shortcode.-how-many-of-the-ids-match" class="section level4">
 <h4>Question 1: Match the data based on the country shortcode. How many of the IDs match?</h4>
 </div>
@@ -179,20 +191,14 @@ MergedData &lt;- merge(x = GDPData3, y = EDUCData, by = &quot;CountryCode&quot;,
 <div id="first-step-we-will-run-the-dim-function-in-order-to-count-the-total-rows-in-the-merged-file." class="section level5">
 <h5>First step: We will run the dim function in order to count the total rows in the merged file.</h5>
 </div>
-<div id="second-step-we-will-run-the-summary-function-and-count-the-nas-in-two-places-" class="section level5">
-<h5>Second step: We will run the summary function, and count the NAs in two places-</h5>
-<div id="column-ranking-originally-in-the-gdp-file" class="section level6">
-<h6>1. Column “Ranking” (originally in the GDP file)</h6>
+<div id="second-step-we-will-run-the-summary-function-and-count-the-nas-in-column-ranking-originally-in-the-gdp-file" class="section level5">
+<h5>Second step: We will run the summary function, and count the NAs in column “Ranking” (originally in the GDP file)</h5>
 </div>
-<div id="column-long.name-originally-in-the-educ-file" class="section level6">
-<h6>2. Column “Long.Name” (originally in the EDUC file)</h6>
+<div id="third-step-we-will-deduct-the-total-nas-in-this-column-from-the-total-numbers-of-rows.-the-remaining-is-the-value-we-are-looking-for---the-values-that-matched-between-the-two-files." class="section level5">
+<h5>Third step: We will deduct the total NAs in this column from the total numbers of rows. The remaining is the value we are looking for - the values that matched between the two files.</h5>
 </div>
-</div>
-<div id="third-step-we-will-deduct-the-total-nas-in-these-two-columns-from-the-total-numbers-of-rows.-the-remaining-is-the-value-we-are-looking-for---the-values-that-matched-between-the-two-files." class="section level5">
-<h5>Third step: We will deduct the total NAs in these two columns from the total numbers of rows. The remaining is the value we are looking for - the values that matched between the two files.</h5>
-</div>
-<div id="the-total-matched-data-is-235-45-1189" class="section level5">
-<h5>The total matched data is 235-45-1=189</h5>
+<div id="the-total-matched-data-is-235-45190" class="section level5">
+<h5>The total matched data is 235-45=190</h5>
 <pre class="r"><code>dim(MergedData)</code></pre>
 <pre><code>## [1] 235  34</code></pre>
 <pre class="r"><code>summary(MergedData)</code></pre>
@@ -405,6 +411,21 @@ q4 &lt;- subset(MergedDataSorted, Ranking &gt; 114 &amp; Ranking &lt;= 152)
 q5 &lt;- subset(MergedDataSorted, Ranking &gt; 152 &amp; Ranking &lt;= 190)
 sum(q1$Income.Group == &quot;Lower middle income&quot;)</code></pre>
 <pre><code>## [1] 5</code></pre>
+</div>
+<div id="conclusion" class="section level4">
+<h4>Conclusion</h4>
+</div>
+<div id="we-have-found-that-there-are-three-countries-with-gdp-significantly-larger-than-the-rest-of-the-world---usa-china-and-japan" class="section level4">
+<h4>1. We have found that there are three countries with GDP significantly larger than the rest of the world - USA, China and Japan;</h4>
+</div>
+<div id="we-can-see-that-usa-and-japan-are-in-the-high-income-oecd-group-while-china-is-in-the-lower-middle-income-group" class="section level4">
+<h4>2. We can see that USA and Japan are in the “High Income: OECD” group, while china is in the “Lower Middle Income” group;</h4>
+</div>
+<div id="low-income-group-contains-countries-with-very-low-gdp-but-high-income-non-oecd-group---as-well.-this-is-compared-to-high-income-oecd-and-upper-middle-income---these-two-groups-have-more-variety-of-gdp-in-it-including-countries-with-high-gdp" class="section level4">
+<h4>3. “Low Income” group contains countries with very low GDP, but “High Income Non OECD” group - as well. This is compared to “High Income OECD” and “Upper Middle Income” - these two groups have more variety of GDP in it, including countries with high GDP;</h4>
+</div>
+<div id="finally-we-can-see-that-out-of-38-countries-the-upper-quantile-in-terms-of-gdp-ranking-only-5-countries-are-in-the-lower-middle-income." class="section level4">
+<h4>4. Finally, we can see that out of 38 countries, the upper quantile in terms of GDP ranking, only 5 countries are in the “Lower Middle Income”.</h4>
 </div>
 
 
